fix: UI, APIs and schemas
